periodic update
- refactor volume mounts/env variables

- add extra controls for logged-in convienence

- store last save/rom in local storage

- misc updates
