# docker/server/auth/auth_handlers.go
@@ -36,14 +36,14 @@ func authorize(endpoint func(http.ResponseWriter, *http.Request)) http.Handler {
 }
 
 // @Summary Uses stored refresh token cookie to issue new auth token
-// @Description Uses stored refresh token + database lookup to issue new auth token
+// @Description Uses stored refresh token to issue new auth token
 // @Tags auth
 // @Produce application/json
 // @Success 200 {string} json "Access token"
 // @Failure 401 {string} string
 // @Failure 405 {string} string
 // @Failure 500 {string} string
-// @Router /api-v1/tokens/refresh [post]
+// @Router /api/tokens/refresh [post]
 func tokenRefresh(w http.ResponseWriter, r *http.Request) {
 	var t string
 	refreshtok, err := r.Cookie("refresh-tok") //get the refresh token cookie
@@ -78,13 +78,13 @@ func tokenRefresh(w http.ResponseWriter, r *http.Request) {
 // @Description User login from credentials, issues refresh token cookie, and access token
 // @Tags auth
 // @Accept application/json
-// @Param Data body string true "User credentials"
+// @Param Data body UserCredentials true "User credentials"
 // @Success 200 {string} string "Access token"
 // @Failure 400 {string} string
 // @Failure 401 {string} string
 // @Failure 405 {string} string
 // @Failure 500 {string} string
-// @Router /api-v1/accounts/login [post]
+// @Router /api/account/login [post]
 func login(w http.ResponseWriter, r *http.Request) {
 	creds := &UserCredentials{}
 	err := json.NewDecoder(r.Body).Decode(creds) //decode user credentials
@@ -166,12 +166,12 @@ func login(w http.ResponseWriter, r *http.Request) {
 // @Summary User Logout
 // @Description User logout
 // @Tags auth
-// @Param Authorization header string true "Bearer <token>"
+// @Param Authorization header string true "Bearer Token"
 // @Success 200 {string} string
 // @Failure 401 {string} string
 // @Failure 405 {string} string
 // @Failure 500 {string} string
-// @Router /api-v1/accounts/logout [post]
+// @Router /api/account/logout [post]
 func logout(w http.ResponseWriter, r *http.Request) {
 	cookie := http.Cookie{ //expire refresh token cookie
 		Name:     "refresh-tok",
